--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     .hero-text{max-width:600px}
     .hero-text h1{font-size:42px;line-height:1.1;margin:0;font-weight:900}
     @media(min-width:768px){.hero-text h1{font-size:64px}}
-    .logo-side{max-width:250px;height:auto;animation:fadeIn 1.2s ease-in-out}
+    .logo-side{max-width:300px;height:auto;animation:fadeIn 1.2s ease-in-out;border-radius:12px}
     @keyframes fadeIn{0%{opacity:0;transform:scale(.96)}100%{opacity:1;transform:scale(1)}}
 
     .icon{width:20px;height:20px;filter:invert(1);transition:filter .2s ease, transform .2s ease}
@@ -86,6 +86,8 @@
           <a href="#services" class="chip">View Services</a>
         </div>
       </div>
+
+      <!-- Your actual logo image -->
       <img src="ChatGPT Image Sep 24, 2025 at 11_43_03 PM.png" alt="AutoMotion Logo" class="logo-side" />
     </div>
   </section>
@@ -187,3 +189,4 @@
   </script>
 </body>
 </html>
+
