--- a/index.html
+++ b/index.html
@@ -13,37 +13,37 @@
     body{margin:0;background:var(--bg);color:var(--text);font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial}
     a{color:inherit;text-decoration:none}
     img{max-width:100%;display:block}
-
     .container{max-width:1100px;margin:0 auto;padding:0 16px}
     .row{display:flex;flex-wrap:wrap;gap:12px;align-items:center}
     .grid{display:grid;gap:28px}
     @media(min-width:992px){.grid-2{grid-template-columns:1fr 1fr}}
     @media(min-width:992px){.grid-3{grid-template-columns:repeat(3,1fr)}}
-
     .header{position:sticky;top:0;z-index:40;background:rgba(0,0,0,.9);backdrop-filter:saturate(120%) blur(6px);border-bottom:1px solid var(--primary)}
     .header-inner{display:flex;align-items:center;justify-content:space-between;padding:12px 0}
     .brand{font-weight:700;font-size:20px}
     .nav{display:none;gap:20px;color:rgba(255,255,255,.85)}
     .nav a:hover{color:var(--primary)}
     @media(min-width:768px){.nav{display:flex}}
-
     .btn{display:inline-flex;align-items:center;gap:10px;background:var(--primary);color:#fff;border-radius:16px;padding:10px 16px;font-weight:600;border:0;cursor:pointer;transition:transform .15s ease,box-shadow .2s ease,background .2s ease}
     .btn:hover{background:#d10000;animation:glow 2.4s ease-in-out infinite;transform:translateY(-3px);box-shadow:0 0 15px rgba(255,0,0,0.4)}
     .chip{display:inline-flex;align-items:center;border:1px solid var(--primary);border-radius:14px;padding:8px 12px;font-weight:600;gap:8px;transition:all .2s ease}
     .chip:hover{background:var(--primary);color:#fff;transform:translateY(-3px);box-shadow:0 0 12px rgba(255,0,0,.3)}
     @keyframes glow{0%,100%{box-shadow:0 0 0 rgba(255,0,0,0)}50%{box-shadow:0 0 24px rgba(255,0,0,.35)}}
-
     .section{padding:80px 0;scroll-margin-top:96px}
     .muted{color:rgba(255,255,255,.85)}
     .card{background:var(--card);border:1px solid rgba(255,0,0,.5);border-radius:18px;padding:20px}
     .title{font-weight:800;letter-spacing:-.01em}
     .stars{color:var(--primary);font-size:20px;margin-top:8px}
-
     .hero-content{display:flex;align-items:center;justify-content:space-between;gap:40px;flex-wrap:wrap}
     .hero-text{max-width:600px}
     .hero-text h1{font-size:42px;line-height:1.1;margin:0;font-weight:900}
     @media(min-width:768px){.hero-text h1{font-size:64px}}
-
+    .icon{width:20px;height:20px;filter:invert(1);transition:filter .2s ease, transform .2s ease}
+    .icon:hover{filter:invert(42%) sepia(91%) saturate(7485%) hue-rotate(356deg) brightness(95%) contrast(119%);transform:scale(1.2)}
+    .input,.textarea{width:100%;background:#000;border:1px solid var(--primary);border-radius:12px;padding:12px 14px;color:#fff}
+    .textarea{min-height:120px;resize:vertical}
+    .grid-form{display:grid;gap:12px}
+    @media(min-width:860px){.grid-form{grid-template-columns:1fr 1fr}}
     footer{border-top:1px solid var(--primary);padding:32px 0;background:#000}
   </style>
 </head>
@@ -58,9 +58,15 @@
         <a href="#contact">Contact</a>
       </nav>
       <div class="row" style="gap:16px">
-        <a href="mailto:AutoMotionMM@gmail.com" title="Email">📧</a>
-        <a href="https://www.instagram.com/aut0.motion/" title="Instagram" target="_blank">📸</a>
-        <a href="https://www.facebook.com/profile.php?id=61581537103009" title="Facebook" target="_blank">📘</a>
+        <a href="mailto:AutoMotionMM@gmail.com" title="Email">
+          <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/maildotru.svg" alt="Email">
+        </a>
+        <a href="https://www.instagram.com/aut0.motion/" title="Instagram" target="_blank">
+          <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/instagram.svg" alt="Instagram">
+        </a>
+        <a href="https://www.facebook.com/profile.php?id=61581537103009" title="Facebook" target="_blank">
+          <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/facebook.svg" alt="Facebook">
+        </a>
         <a href="#contact" class="btn">Book&nbsp;Now</a>
       </div>
     </div>
@@ -164,9 +170,15 @@
     <div class="container row" style="justify-content:space-between">
       <div>© <span id="year"></span> AutoMotion. All rights reserved.</div>
       <div class="row" style="gap:24px">
-        <a href="mailto:AutoMotionMM@gmail.com" title="Email">📧</a>
-        <a href="https://www.instagram.com/aut0.motion/" title="Instagram" target="_blank">📸</a>
-        <a href="https://www.facebook.com/profile.php?id=61581537103009" title="Facebook" target="_blank">📘</a>
+        <a href="mailto:AutoMotionMM@gmail.com" title="Email">
+          <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/maildotru.svg" alt="Email">
+        </a>
+        <a href="https://www.instagram.com/aut0.motion/" title="Instagram" target="_blank">
+          <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/instagram.svg" alt="Instagram">
+        </a>
+        <a href="https://www.facebook.com/profile.php?id=61581537103009" title="Facebook" target="_blank">
+          <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/facebook.svg" alt="Facebook">
+        </a>
       </div>
     </div>
   </footer>
@@ -175,5 +187,3 @@
   </script>
 </body>
 </html>
-
-
